--- a/assignment_4_proj/management/templates/management/management_base.html
+++ b/assignment_4_proj/management/templates/management/management_base.html
@@ -23,6 +23,8 @@
                 {% if user.is_authenticated %}
                     {% if user.user_type == "supervisor" or user.user_type == "unit_coordinator" %}
                         <li class="navigation__item"><a class="link" href="{% url "management-index" %}">Management</a></li>
+                        <li class="navigation__item"><a class="link" href="{% url "manage-project" %}">Approved Projects</a></li>
+                        <li class="navigation__item"><a class="link" href="{% url "project-pendings" %}">Pendings</a></li>
                         <li class="navigation__item"><a class="link" href="{% url "account-logout" %}">Logout</a></li>
                     {% endif %}
                 {% else %}
