modified img path in base

--- a/assignment_4_proj/management/templates/management/management_base.html
+++ b/assignment_4_proj/management/templates/management/management_base.html
@@ -13,7 +13,7 @@
     <header class="header">
         <a class="link" href="{% url 'home' %}">
             <div class="header__logo">
-                <img class="header__img" src="{% static "img/cdu-logo.png" %}" alt="Group 11 Logo">
+                <img class="header__img" src="{% static "/img/CDU-Logo.png" %}" alt="Group 11 Logo">
                 <div>CDU</div>
             </div>
         </a>
