cleaned projects table

--- a/assignment_4_proj/management/templates/management/management_project.html
+++ b/assignment_4_proj/management/templates/management/management_project.html
@@ -61,7 +61,7 @@
                     {% endif %}
 
                     {% if user == project.supervisor  %}
-                        update
+                        {% comment %} where update request can be placed in the future {% endcomment %}
                     {% endif %}
                 {% endif %}
 
