add changes to database

--- a/assignment_4_proj/assignment_4_app/static/assignment_4_app/projectList.css
+++ b/assignment_4_proj/assignment_4_app/static/assignment_4_app/projectList.css
@@ -83,6 +83,10 @@
     background-color: var(--color-secondary);
 }
 
+.search-button {
+    transform: translateY(6px);
+}
+
 .search-bar {
     width: 85rem;
     padding: 10px 20px;
