--- a/assignment_4_proj/management/static/management/management_addProject.css
+++ b/assignment_4_proj/management/static/management/management_addProject.css
@@ -16,4 +16,66 @@
 
 .link-return {
     font-size: 2rem;
+    border-bottom: 2px solid ;
+}
+
+.input {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0 10px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.inputNum {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0 10px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.checkbox {
+    margin: 5px 0 10px 0;
+}
+
+.textarea {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    margin: 5px 0 10px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #45a049;
+}
+
+p > label {
+    font-size: 1.8rem; /* Increase font size here */
+}
+
+div > label {
+    font-size: 1.4rem;
 }
