--- a/assignment_4_proj/management/templates/management/addProject.html
+++ b/assignment_4_proj/management/templates/management/addProject.html
@@ -25,7 +25,7 @@
             <input type="submit" value="submit" class="btn btn-submit">
         </form>
 
-        <a class="link-return" href="{% url "manage-project" %}">return to manage project</a>
+        <a class="link-return" href="{% url "manage-project" %}">return to manage project &#187;</a>
     {% endif %}
 </div>
 {% endblock content %}
