--- a/assignment_4_proj/management/static/management/management_addProject.css
+++ b/assignment_4_proj/management/static/management/management_addProject.css
@@ -79,3 +79,17 @@ p > label {
 div > label {
     font-size: 1.4rem;
 }
+
+.add-success {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.link-container {
+    margin-bottom: 1rem;
+}
+.link__homepage, 
+.link__add-project {
+    font-size: 1.8rem;
+    border-bottom: 2px solid;
+}
