add css to manage_project_pending

--- a/assignment_4_proj/management/static/management/management_project.css
+++ b/assignment_4_proj/management/static/management/management_project.css
@@ -62,9 +62,10 @@
     padding: 2rem;
 }
 
-.section:nth-child(2n + 1) {
+.section__link {
     height: 4rem;
     padding: .5rem 2rem;
+    background-color: white;
 }
 
 .project {
