--- a/assignment_4_proj/management/templates/management/management_project.html
+++ b/assignment_4_proj/management/templates/management/management_project.html
@@ -54,7 +54,7 @@
                 </section>
                 {% if user.is_authenticated %}
                     {% if user.user_type == "unit_coordinator"%}
-                        <section class="section">
+                        <section class="section__link">
                             <a class="link link__update" href="{% url 'update-project' project.topic_num %}"> Update </a>
                             <a class="link link__delete" href="{% url 'delete-project' project.topic_num %}"> Delete thesis </a>
                         </section>
