--- a/assignment_4_proj/management/templates/management/management_project_pendings.html
+++ b/assignment_4_proj/management/templates/management/management_project_pendings.html
@@ -5,7 +5,7 @@
 {% block title %} Project requests {% endblock %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static "management/.css"%}">
+    <link rel="stylesheet" href="{% static "management/management_project_pending.css"%}">
 {% endblock %}
 
 {% block content %}
