--- a/assignment_4_proj/management/static/management/management_project_pending.css
+++ b/assignment_4_proj/management/static/management/management_project_pending.css
@@ -5,3 +5,15 @@
     margin-bottom: 1rem;
 }
 
+.link-return {
+    font-size: 1.4rem;
+    border-bottom: 2px solid;
+}
+
+.project__heading {
+    margin-bottom: 1rem;
+}
+
+p {
+    margin-bottom: .5rem;
+}
