--- a/assignment_4_proj/management/static/management/management_addProject.css
+++ b/assignment_4_proj/management/static/management/management_addProject.css
@@ -85,6 +85,19 @@ div > label {
     margin-bottom: 1rem;
 }
 
+.update-success {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+    padding: 1rem 2rem;
+    border-radius: 5px;
+    background-color: lightgreen;
+    border: none;
+}
+.update-success:hover {
+    filter: brightness(1.05);
+    cursor: pointer;
+}
+
 .link-container {
     margin-bottom: 1rem;
 }
