--- a/assignment_4_proj/management/templates/management/management_project_pendings.html
+++ b/assignment_4_proj/management/templates/management/management_project_pendings.html
@@ -98,5 +98,5 @@
 {% else %}
     <h2>There are currently no project pendings!</h2>
 {% endif %}
-<a class="link-return" href="{% url "management-index" %}">return home &#187;</a>
+<p class="container__link-return"><a class="link-return" href="{% url "management-index" %}">return home &#187;</a></p>
 {% endblock content %}
