--- a/assignment_4_proj/management/static/management/management_project.css
+++ b/assignment_4_proj/management/static/management/management_project.css
@@ -73,6 +73,12 @@
     background-color: aliceblue;
     border-radius: 5px;
 }
+.project__heading {
+    margin-bottom: 1rem;
+}
+.project__paragraph {
+    margin-bottom: .5rem;
+}
 
 section > .link {
     padding: 1rem 2rem;
