--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/search.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/search.html
@@ -4,8 +4,7 @@
 {% block title %} Searched {% endblock %}
 
 {% block css_files %}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% comment %} <link rel="stylesheet" href="{% static "assignment_4_app/search.css"%}"> {% endcomment %}
+    <link rel="stylesheet" href="{% static "assignment_4_app/search.css"%}">
 {% endblock %}
 
 
